# nanoparticle_generator

./: LICENSE  README.md  pyproject.toml
nanoparticle_generator/: __init__.py  blender.py  scene_building.py
nanoparticle_generator/shapes/: __init__.py  basic.py  fcc.py
nanoparticle_generator/shapes/randomized/: __init__.py  fcc.py
notebooks/: demo.ipynb
